crates/alder-parse/src/expression/snapshots/alder_parse__expression__accessor__tests__accessor_long.snap
---
source: crates/alder-parse/src/expression/accessor.rs
description: "Code:\n\n.firstName"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 11,
        },
    },
    value: Accessor(
        "firstName",
    ),
}
