crates/alder-parse/src/expression/snapshots/alder_parse__expression__accessor__tests__field_access_chain.snap
---
source: crates/alder-parse/src/expression/accessor.rs
description: "Code:\n\nfoo.bar.baz"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 12,
        },
    },
    value: Access {
        record: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 8,
                },
            },
            value: Access {
                record: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 4,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "foo",
                    },
                },
                field: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 5,
                        },
                        end: Position {
                            line: 1,
                            column: 8,
                        },
                    },
                    value: "bar",
                },
            },
        },
        field: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 9,
                },
                end: Position {
                    line: 1,
                    column: 12,
                },
            },
            value: "baz",
        },
    },
}
