crates/alder-parse/src/expression/snapshots/alder_parse__expression__accessor__tests__record_field_access.snap
---
source: crates/alder-parse/src/expression/accessor.rs
description: "Code:\n\n{ x = 1 }.x"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 12,
        },
    },
    value: Access {
        record: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 10,
                },
            },
            value: Record(
                [
                    FieldAssign {
                        field: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 3,
                                },
                                end: Position {
                                    line: 1,
                                    column: 4,
                                },
                            },
                            value: "x",
                        },
                        value: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 7,
                                },
                                end: Position {
                                    line: 1,
                                    column: 8,
                                },
                            },
                            value: Int(
                                1,
                            ),
                        },
                    },
                ],
            ),
        },
        field: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 11,
                },
                end: Position {
                    line: 1,
                    column: 12,
                },
            },
            value: "x",
        },
    },
}
